--- a/SmartMemoWebSite/src/addMemo.htm
+++ b/SmartMemoWebSite/src/addMemo.htm
@@ -1,11 +1,72 @@
-<html>
+<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312" x-undefined>
+<meta http-equiv="Content-Language" content="zh-cn">
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
+<link rel="File-List" href="addMemo.files/filelist.xml">
+
 <title>新建网页 1</title>
+<!--[if !mso]>
+<style>
+v\:*         { behavior: url(#default#VML) }
+o\:*         { behavior: url(#default#VML) }
+.shape       { behavior: url(#default#VML) }
+</style>
+<![endif]--><!--[if gte mso 9]>
+<xml><o:shapedefaults v:ext="edit" spidmax="1027"/>
+</xml><![endif]-->
 </head>
 
 <body>
+
+<form method="POST" action="../_derived/nortbots.htm" onSubmit="location.href='../_derived/nortbots.htm';return false;" webbot-onSubmit webbot-action="--WEBBOT-SELF--">
+	<!--webbot bot="SaveResults" U-File="../_private/form_results.csv" S-Format="TEXT/CSV" S-Label-Fields="TRUE" startspan --><input TYPE="hidden" NAME="VTI-GROUP" VALUE="0"><!--webbot bot="SaveResults" i-checksum="43374" endspan -->
+	<p align="center">&nbsp; <!--[if gte vml 1]><v:shapetype id="_x0000_t136"
+ coordsize="21600,21600" o:spt="136" adj="10800" path="m@7,l@8,m@5,21600l@6,21600e">
+ <v:formulas>
+  <v:f eqn="sum #0 0 10800"/>
+  <v:f eqn="prod #0 2 1"/>
+  <v:f eqn="sum 21600 0 @1"/>
+  <v:f eqn="sum 0 0 @2"/>
+  <v:f eqn="sum 21600 0 @3"/>
+  <v:f eqn="if @0 @3 0"/>
+  <v:f eqn="if @0 21600 @1"/>
+  <v:f eqn="if @0 0 @2"/>
+  <v:f eqn="if @0 @4 21600"/>
+  <v:f eqn="mid @5 @6"/>
+  <v:f eqn="mid @8 @5"/>
+  <v:f eqn="mid @7 @8"/>
+  <v:f eqn="mid @6 @7"/>
+  <v:f eqn="sum @6 0 @5"/>
+ </v:formulas>
+ <v:path textpathok="t" o:connecttype="custom" o:connectlocs="@9,0;@10,10800;@11,21600;@12,10800"
+  o:connectangles="270,180,90,0"/>
+ <v:textpath on="t" fitshape="t"/>
+ <v:handles>
+  <v:h position="#0,bottomRight" xrange="6629,14971"/>
+ </v:handles>
+ <o:lock v:ext="edit" text="t" shapetype="t"/>
+</v:shapetype><v:shape id="_x0000_s1039" type="#_x0000_t136" alt="Smart  Memo"
+ style='width:303pt;height:47.25pt' fillcolor="#9c0" strokecolor="#396">
+ <v:shadow color="#868686"/>
+ <v:textpath style='font-family:"微软雅黑";font-size:48pt;v-text-kern:t' trim="t"
+  fitpath="t" string="Smart  Memo"/>
+</v:shape><![endif]--><![if !vml]><img border=0 width=406 height=65
+src="addMemo.files/image001.gif" alt="Smart  Memo" v:shapes="_x0000_s1039"><![endif]>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	</p>
+	<p align="center"><font face="微软雅黑" size="5" color="#000000">新建备忘录：</font><font color="#808080" size="5" face="微软雅黑">
+	<font size="4">&nbsp;
+	<a href="realTimeMemo.htm">
+	<input type="button" value="实时提醒" name="B1" style="width: 100; height: 38"></a></font>&nbsp;&nbsp;&nbsp;
+	<a href="timingMemo.htm">
+	<input type="button" value="定时提醒" name="b2" style="width: 100; height: 39" ></a>&nbsp;&nbsp;&nbsp; 
+	<a href="periodicMemo.htm">
+	<input type="button" value="周期性提醒" name="B3" style="width: 100; height: 40"></a></font>&nbsp;&nbsp;&nbsp;</p>
+	<p align="center">当前用户：<input type="text" name="T1" size="20" style="background-color: #C0C0C0">&nbsp;</p>
+	<p align="center">退出登录&nbsp;&nbsp;&nbsp;&nbsp;</p>
+	<p align="center">&nbsp;&nbsp;&nbsp;</p>
+	<p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
+</form>
 
 </body>
 
