添加web页面，用来添加备忘录。

--- a/SmartMemoWebSite/src/login.html
+++ b/SmartMemoWebSite/src/login.html
@@ -48,7 +48,7 @@ body {
 			    <div id="password">ÃÜ   Âë :
 			      <input type="password" name="textfield2" />
 			    </div>
-				   <div id="btn"><a href="#">µÇ    Â¼</a></div>
+				   <div id="btn"><a href="addMemo.htm">µÇ    Â¼</a></div>
 			  
 			  </div>
 			  <div id="center_right"></div>		 
