--- a/SmartMemoWebSite/src/addMemo.htm
+++ b/SmartMemoWebSite/src/addMemo.htm
@@ -46,13 +46,13 @@ o\:*         { behavior: url(#default#VML) }
   <v:h position="#0,bottomRight" xrange="6629,14971"/>
  </v:handles>
  <o:lock v:ext="edit" text="t" shapetype="t"/>
-</v:shapetype><v:shape id="_x0000_s1039" type="#_x0000_t136" alt="Smart  Memo"
+</v:shapetype><v:shape id="_x0000_s1025" type="#_x0000_t136" alt="Smart  Memo"
  style='width:303pt;height:47.25pt' fillcolor="#9c0" strokecolor="#396">
  <v:shadow color="#868686"/>
  <v:textpath style='font-family:"微软雅黑";font-size:48pt;v-text-kern:t' trim="t"
   fitpath="t" string="Smart  Memo"/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=406 height=65
-src="addMemo.files/image001.gif" alt="Smart  Memo" v:shapes="_x0000_s1039"><![endif]>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+src="addMemo.files/image001.gif" alt="Smart  Memo" v:shapes="_x0000_s1025"><![endif]>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	</p>
 	<p align="center"><font face="微软雅黑" size="5" color="#000000">新建备忘录：</font><font color="#808080" size="5" face="微软雅黑">
 	<font size="4">&nbsp;
@@ -63,7 +63,7 @@ src="addMemo.files/image001.gif" alt="Smart  Memo" v:shapes="_x0000_s1039"><![en
 	<a href="periodicMemo.htm">
 	<input type="button" value="周期性提醒" name="B3" style="width: 100; height: 40"></a></font>&nbsp;&nbsp;&nbsp;</p>
 	<p align="center">当前用户：<input type="text" name="T1" size="20" style="background-color: #C0C0C0">&nbsp;</p>
-	<p align="center">退出登录&nbsp;&nbsp;&nbsp;&nbsp;</p>
+	<p align="center"><a href="login.html">退出登录</a>&nbsp;&nbsp;&nbsp;&nbsp;</p>
 	<p align="center">&nbsp;&nbsp;&nbsp;</p>
 	<p>&nbsp;&nbsp;&nbsp;&nbsp; </p>
 </form>
