--- a/SmartMemoWebSite/src/_vti_cnf/login.html
+++ b/SmartMemoWebSite/src/_vti_cnf/login.html
@@ -1,14 +1,14 @@
 vti_encoding:SR|utf8-nl
-vti_timelastmodified:TR|06 Oct 2013 09:14:34 -0000
+vti_timelastmodified:TR|06 Oct 2013 12:07:53 -0000
 vti_extenderversion:SR|6.0.2.8161
 vti_author:SR|WWB-PC\\WWB
 vti_modifiedby:SR|WWB-PC\\WWB
 vti_timecreated:TR|06 Oct 2013 09:13:50 -0000
 vti_title:SR|用户登录
 vti_backlinkinfo:VX|src/addMemo.htm
-vti_nexttolasttimemodified:TW|06 Oct 2013 09:13:50 -0000
-vti_cacheddtm:TX|06 Oct 2013 09:14:34 -0000
-vti_filesize:IR|1677
+vti_nexttolasttimemodified:TW|06 Oct 2013 12:06:07 -0000
+vti_cacheddtm:TX|06 Oct 2013 12:07:53 -0000
+vti_filesize:IR|1742
 vti_cachedtitle:SR|用户登录
 vti_cachedbodystyle:SR|<body>
 vti_cachedlinkinfo:VX|Q|images/login.css S|images/bg.jpg S|images/login_03.png H|addMemo.htm
@@ -17,5 +17,5 @@ vti_cachedneedsrewrite:BR|false
 vti_cachedhasbots:BR|false
 vti_cachedhastheme:BR|false
 vti_cachedhasborder:BR|false
-vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=gb2312
-vti_charset:SR|gb2312
+vti_metatags:VR|HTTP-EQUIV=Content-Type text/html;\\ charset=utf-8
+vti_charset:SR|utf-8
